deploy: 4db894d274fcd0811f29bd0f6ce09a280ab27237

--- a/numerical/linrec/kitamasa.html
+++ b/numerical/linrec/kitamasa.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Segment Trees - Rust Snippets for Competitive Programming</title>
+        <title>Kitamasa - Rust Snippets for Competitive Programming</title>
         <!-- Custom HTML head -->
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../../numerical/linrec/intro.html"><strong aria-hidden="true">6.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../numerical/linrec/berlekamp.html"><strong aria-hidden="true">6.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../../numerical/linrec/kitamasa.html"><strong aria-hidden="true">6.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../../numerical/linrec/bostanmori.html"><strong aria-hidden="true">6.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../../datastructure/bitarray.html"><strong aria-hidden="true">7.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/intro.html" class="active"><strong aria-hidden="true">8.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../datastructure/segtree/segtree.html"><strong aria-hidden="true">8.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/fenwick.html"><strong aria-hidden="true">8.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">8.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../../graphs/adjlist.html"><strong aria-hidden="true">9.</strong> Adjancy List Graph Representation</a></li><li class="chapter-item expanded "><a href="../../graphs/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../../graphs/scc.html"><strong aria-hidden="true">11.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../../graphs/2sat.html"><strong aria-hidden="true">12.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../../geometry/convexhull.html"><strong aria-hidden="true">13.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../../unclass/valcomp.html"><strong aria-hidden="true">14.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../../unclass/lis.html"><strong aria-hidden="true">15.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../../misc/psbase.html"><strong aria-hidden="true">16.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../../misc/zero_one_trait.html"><strong aria-hidden="true">17.</strong> Zero/One Trait</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="../../algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="../../algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="../../algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="../../algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="../../algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="../../numerical/linrec/intro.html"><strong aria-hidden="true">6.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../numerical/linrec/berlekamp.html"><strong aria-hidden="true">6.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="../../numerical/linrec/kitamasa.html" class="active"><strong aria-hidden="true">6.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="../../numerical/linrec/bostanmori.html"><strong aria-hidden="true">6.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="../../datastructure/bitarray.html"><strong aria-hidden="true">7.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/intro.html"><strong aria-hidden="true">8.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../datastructure/segtree/segtree.html"><strong aria-hidden="true">8.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/fenwick.html"><strong aria-hidden="true">8.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="../../datastructure/segtree/lazyseg.html"><strong aria-hidden="true">8.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="../../graphs/adjlist.html"><strong aria-hidden="true">9.</strong> Adjancy List Graph Representation</a></li><li class="chapter-item expanded "><a href="../../graphs/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="../../graphs/scc.html"><strong aria-hidden="true">11.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="../../graphs/2sat.html"><strong aria-hidden="true">12.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="../../geometry/convexhull.html"><strong aria-hidden="true">13.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="../../unclass/valcomp.html"><strong aria-hidden="true">14.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="../../unclass/lis.html"><strong aria-hidden="true">15.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="../../misc/psbase.html"><strong aria-hidden="true">16.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="../../misc/zero_one_trait.html"><strong aria-hidden="true">17.</strong> Zero/One Trait</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -139,17 +139,71 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="segment-trees"><a class="header" href="#segment-trees">Segment Trees</a></h1>
-<p>Segment trees are a category of data structures which can handle range queries efficiently.</p>
+                        <h1 id="kitamasa"><a class="header" href="#kitamasa">Kitamasa</a></h1>
+<pre><code class="language-rust noplayground">fn poly_mul(v: &amp;[u64], w: &amp;[u64], rec: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut t = vec![0; 2 * v.len()];
+
+    for j in 0..v.len() {
+        for k in 0..w.len() {
+            t[j + k] += v[j] * w[k] % m;
+            if t[j + k] &gt;= m {
+                t[j + k] -= m;
+            }
+        }
+    }
+
+    for j in (v.len()..2 * v.len()).rev() {
+        for k in 1..=v.len() {
+            t[j - k] += t[j] * rec[k - 1] % m;
+            if t[j - k] &gt;= m {
+                t[j - k] -= m;
+            }
+        }
+    }
+
+    t[..v.len()].iter().map(|x| *x).collect()
+}
+
+/// Finds arr[n] where
+/// arr[n+d] = rec[0]arr[n] + rec[1]arr[n+1] + rec[2]arr[n+2] + rec[3]arr[n+3] + ... + rec[d-1]arr[n+d-1]
+/// under modulo m where d=rec.len()=arr.len()
+fn kitamasa(rec: &amp;[u64], vals: &amp;[u64], mut n: u64, m: u64) -&gt; u64 {
+    let recurr: Vec&lt;_&gt; = rec.iter().rev().copied().collect();
+    let (mut s, mut t) = (vec![0u64; recurr.len()], vec![0u64; recurr.len()]);
+    s[0] = 1;
+    if recurr.len() != 1 {
+        t[1] = 1;
+    } else {
+        t[0] = recurr[0];
+    }
+
+    while n != 0 {
+        if n &amp; 1 != 0 {
+            s = poly_mul(&amp;s, &amp;t, &amp;recurr, m);
+        }
+        t = poly_mul(&amp;t, &amp;t, &amp;recurr, m);
+        n &gt;&gt;= 1;
+    }
+
+    let mut ret = 0u64;
+    for i in 0..recurr.len() {
+        ret += s[i] * vals[i] % m;
+        if ret &gt;= m {
+            ret -= m;
+        }
+    }
+    ret
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../datastructure/bitarray.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../numerical/linrec/berlekamp.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../../datastructure/segtree/segtree.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../numerical/linrec/bostanmori.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -158,10 +212,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../datastructure/bitarray.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../numerical/linrec/berlekamp.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../../datastructure/segtree/segtree.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../numerical/linrec/bostanmori.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
