--- a/print.html
+++ b/print.html
@@ -78,7 +78,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">6.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">7.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">7.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">7.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">7.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">8.</strong> Adjancy List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">9.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">10.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">11.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">12.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">13.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">14.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/psbase.html"><strong aria-hidden="true">15.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">16.</strong> Zero/One Trait</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="intro.html">How to use</a></li><li class="chapter-item expanded affix "><li class="part-title">Algebra</li><li class="chapter-item expanded "><a href="algebra/gcd.html"><strong aria-hidden="true">1.</strong> GCD, LCM</a></li><li class="chapter-item expanded "><a href="algebra/extgcd.html"><strong aria-hidden="true">2.</strong> Extended Euclidean Algorithm</a></li><li class="chapter-item expanded "><a href="algebra/crt.html"><strong aria-hidden="true">3.</strong> Chinese Remainder Theorem</a></li><li class="chapter-item expanded "><a href="algebra/millerrabin.html"><strong aria-hidden="true">4.</strong> Primality Test</a></li><li class="chapter-item expanded "><a href="algebra/pollardrho.html"><strong aria-hidden="true">5.</strong> Prime Factorization</a></li><li class="chapter-item expanded affix "><li class="part-title">Numerical Algorithms</li><li class="chapter-item expanded "><a href="numerical/linrec/intro.html"><strong aria-hidden="true">6.</strong> Linear Recurrence</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="numerical/linrec/berlekamp.html"><strong aria-hidden="true">6.1.</strong> Berlekamp-Massey</a></li><li class="chapter-item expanded "><a href="numerical/linrec/kitamasa.html"><strong aria-hidden="true">6.2.</strong> Kitamasa</a></li><li class="chapter-item expanded "><a href="numerical/linrec/bostanmori.html"><strong aria-hidden="true">6.3.</strong> Bostan-Mori</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Data Structures</li><li class="chapter-item expanded "><a href="datastructure/bitarray.html"><strong aria-hidden="true">7.</strong> Bit Array</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/intro.html"><strong aria-hidden="true">8.</strong> Segment Trees</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="datastructure/segtree/segtree.html"><strong aria-hidden="true">8.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/fenwick.html"><strong aria-hidden="true">8.2.</strong> Fenwick Tree</a></li><li class="chapter-item expanded "><a href="datastructure/segtree/lazyseg.html"><strong aria-hidden="true">8.3.</strong> Lazy Segment Tree</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Graphs</li><li class="chapter-item expanded "><a href="graphs/adjlist.html"><strong aria-hidden="true">9.</strong> Adjancy List Graph Representation</a></li><li class="chapter-item expanded "><a href="graphs/dsu.html"><strong aria-hidden="true">10.</strong> Disjoint Set Union</a></li><li class="chapter-item expanded "><a href="graphs/scc.html"><strong aria-hidden="true">11.</strong> Strongly Connected Components</a></li><li class="chapter-item expanded "><a href="graphs/2sat.html"><strong aria-hidden="true">12.</strong> 2-SAT</a></li><li class="chapter-item expanded affix "><li class="part-title">Geometry</li><li class="chapter-item expanded "><a href="geometry/convexhull.html"><strong aria-hidden="true">13.</strong> Convex Hull</a></li><li class="chapter-item expanded affix "><li class="part-title">Unclassified</li><li class="chapter-item expanded "><a href="unclass/valcomp.html"><strong aria-hidden="true">14.</strong> Value Compression</a></li><li class="chapter-item expanded "><a href="unclass/lis.html"><strong aria-hidden="true">15.</strong> Longest Increasing Subsequence</a></li><li class="chapter-item expanded affix "><li class="part-title">Misc</li><li class="chapter-item expanded "><a href="misc/psbase.html"><strong aria-hidden="true">16.</strong> Base Template</a></li><li class="chapter-item expanded "><a href="misc/zero_one_trait.html"><strong aria-hidden="true">17.</strong> Zero/One Trait</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -590,6 +590,206 @@ let a = 3284729387911u64;
 let mut factors = factorize(a, &amp;mut rng);
 factors.sort();
 assert_eq!(factors, [53, 61976026187]);
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="linear-recurrence"><a class="header" href="#linear-recurrence">Linear Recurrence</a></h1>
+<p>Algorithms related to linear recurrences</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="berlekamp-massey"><a class="header" href="#berlekamp-massey">Berlekamp-Massey</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="kitamasa"><a class="header" href="#kitamasa">Kitamasa</a></h1>
+<pre><code class="language-rust noplayground">fn poly_mul(v: &amp;[u64], w: &amp;[u64], rec: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut t = vec![0; 2 * v.len()];
+
+    for j in 0..v.len() {
+        for k in 0..w.len() {
+            t[j + k] += v[j] * w[k] % m;
+            if t[j + k] &gt;= m {
+                t[j + k] -= m;
+            }
+        }
+    }
+
+    for j in (v.len()..2 * v.len()).rev() {
+        for k in 1..=v.len() {
+            t[j - k] += t[j] * rec[k - 1] % m;
+            if t[j - k] &gt;= m {
+                t[j - k] -= m;
+            }
+        }
+    }
+
+    t[..v.len()].iter().map(|x| *x).collect()
+}
+
+/// Finds arr[n] where
+/// arr[n+d] = rec[0]arr[n] + rec[1]arr[n+1] + rec[2]arr[n+2] + rec[3]arr[n+3] + ... + rec[d-1]arr[n+d-1]
+/// under modulo m where d=rec.len()=arr.len()
+fn kitamasa(rec: &amp;[u64], vals: &amp;[u64], mut n: u64, m: u64) -&gt; u64 {
+    let recurr: Vec&lt;_&gt; = rec.iter().rev().copied().collect();
+    let (mut s, mut t) = (vec![0u64; recurr.len()], vec![0u64; recurr.len()]);
+    s[0] = 1;
+    if recurr.len() != 1 {
+        t[1] = 1;
+    } else {
+        t[0] = recurr[0];
+    }
+
+    while n != 0 {
+        if n &amp; 1 != 0 {
+            s = poly_mul(&amp;s, &amp;t, &amp;recurr, m);
+        }
+        t = poly_mul(&amp;t, &amp;t, &amp;recurr, m);
+        n &gt;&gt;= 1;
+    }
+
+    let mut ret = 0u64;
+    for i in 0..recurr.len() {
+        ret += s[i] * vals[i] % m;
+        if ret &gt;= m {
+            ret -= m;
+        }
+    }
+    ret
+}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="bostan-mori"><a class="header" href="#bostan-mori">Bostan-Mori</a></h1>
+<p>Reference - <a href="https://hal.inria.fr/hal-02917827v2/document">Alin Bostan, Ryuhei Mori. A Simple and Fast Algorithm for Computing the N-th Term of a Linearly Recurrent Sequence. SOSA’21 (SIAM Symposium on Simplicity in Algorithms), Jan 2021, Alexandria, United States. ffhal-02917827v2f</a></p>
+<h2 id="calculating-one-value-of-the-sequence"><a class="header" href="#calculating-one-value-of-the-sequence">Calculating one value of the sequence</a></h2>
+<h3 id="naive-multiplication-under-prime-modulo"><a class="header" href="#naive-multiplication-under-prime-modulo">Naive multiplication, under prime modulo</a></h3>
+<pre><code class="language-rust noplayground">/// f = f[0] + f[1]x + f[2]x2 + ...
+fn poly_mul(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; f.len() + g.len() - 1];
+    for (i, &amp;u) in f.iter().enumerate() {
+        // u*x**i
+        for (j, &amp;v) in g.iter().enumerate() {
+            // v*x**j
+            h[i + j] += u * v;
+            h[i + j] %= m;
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+fn poly_mul_even_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
+    for (i, &amp;u) in f.iter().enumerate() {
+        if i &amp; 1 == 0 {
+            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        } else {
+            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+fn poly_mul_odd_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
+    for (i, &amp;u) in f.iter().enumerate() {
+        if i &amp; 1 != 0 {
+            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        } else {
+            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+/// f(x) -&gt; f(-x)
+fn get_neg_x(f: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    f.iter()
+        .enumerate()
+        .map(|(i, &amp;v)| if i &amp; 1 == 0 { v } else { m - v })
+        .collect()
+}
+
+/// Returns g, s, t s.t. g=gcd(a,b) and as+bt=r
+fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
+    let (mut s, mut old_s) = (0, 1);
+    let (mut r, mut old_r) = (b, a);
+    while r != 0 {
+        let q = old_r / r;
+
+        let new_r = old_r - q * r;
+        old_r = r;
+        r = new_r;
+
+        let new_s = old_s - q * s;
+        old_s = s;
+        s = new_s;
+    }
+
+    (
+        old_r,
+        old_s,
+        if b != 0 { (old_r - old_s * a) / b } else { 0 },
+    )
+}
+
+fn mod_inv(a: u64, m: u64) -&gt; u64 {
+    let (_, mut x, _) = ext_gcd((a % m) as i64, m as i64);
+    if x &lt; 0 {
+        x += m as i64;
+    }
+    x as u64 % m
+}
+
+/// Finds arr[n] where
+/// arr[n+d] = rec[0]arr[n] + rec[1]arr[n+1] + rec[2]arr[n+2] + rec[3]arr[n+3] + ... + rec[d-1]arr[n+d-1]
+/// under modulo m where d=rec.len()=arr.len()
+fn bostan_mori(rec: &amp;[u64], vals: &amp;[u64], n: u64, m: u64) -&gt; u64 {
+    if vals.len() as u64 &gt; n {
+        return vals[n as usize];
+    }
+    let d = rec.len();
+
+    let mut q: Vec&lt;u64&gt; = Vec::with_capacity(d + 1);
+    q.push(1);
+    q.extend(rec.iter().map(|&amp;v| m - v).rev());
+
+    let mut p = poly_mul(vals, &amp;q, m);
+    p.truncate(d);
+
+    let mut n = n;
+    while n &gt;= 1 {
+        let mq = get_neg_x(&amp;q, m);
+        if n &amp; 1 == 0 {
+            p = poly_mul_even_order(&amp;p, &amp;mq, m);
+        } else {
+            p = poly_mul_odd_order(&amp;p, &amp;mq, m);
+        }
+        q = poly_mul_even_order(&amp;q, &amp;mq, m);
+        n &gt;&gt;= 1;
+    }
+    p[0] * mod_inv(q[0], m) // Requires GCD(q[0], m) = 1, it's safe to have m as a prime
+}
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="bit-array"><a class="header" href="#bit-array">Bit Array</a></h1>
 <pre><code class="language-rust noplayground">struct BitArray {
